--- a/config/conf.production.yml
+++ b/config/conf.production.yml
@@ -5,6 +5,15 @@ database:
   host: ""
   name: ""
   port: 5432
+  admin:
+    enabled: true
+    allow_from:
+      - '127.0.0.0/8'
+    auth_token: fDyRbfutO4nE5VvzYs4bdhPsUdn0Z6ECdbwXMXkkthGUNr6c
+admin:
+  enabled: false
+  allow_from: []
+  auth_token: ''
 app:
   webapp_base_url: "http://localhost:3006"
   pagination:
