--- a/config/conf.development.yml
+++ b/config/conf.development.yml
@@ -6,8 +6,7 @@ database:
   name: api2_development
 admin:
   enabled: true
-  allow_from:
-    - '127.0.0.0/8'
+  allow_from: '127.0.0.0/8,[::1]/128'
   auth_token: fDyRbfutO4nE5VvzYs4bdhPsUdn0Z6ECdbwXMXkkthGUNr6c
 app:
   webapp_base_url: ""
