--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,17 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+      redis:
+        image: redis:6
+        ports:
+          - 6379:6379
     strategy:
       matrix:
         ruby:
           - '3.1'
           - '3.0'
           - '2.7'
-      fail-fast: true
+      fail-fast: false
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
