--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,12 @@ jobs:
     strategy:
       matrix:
         ruby:
-          - '3.1'
           - '3.0'
-          - '2.7'
-      fail-fast: false
+        include:
+          - ruby:
+            version: '3.1'
+            experimental: true
+      fail-fast: true
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
